# cppbackend

./: none
cpp-backend (1-я копия)/: d
cpp-backend (1-я копия)/sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
cpp-backend (1-я копия)/sprint1/samples/tcp-udp/: tcp_client.cpp
cpp-backend (1-я копия)/sprint2/problems/game_state/solution/: CMakeLists.txt
cpp-backend (1-я копия)/sprint2/problems/join_game/solution/: CMakeLists.txt
cpp-backend (1-я копия)/sprint2/problems/logger/solution/: my_logger.h
cpp-backend (1-я копия)/sprint2/problems/server_logging/solution/: CMakeLists.txt
cpp-backend (1-я копия)/sprint2/problems/static_content/solution/: Dockerfile
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: cl_listener.h  cl_session_base.h  http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  includes.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/final_task/solution/src/server/: cl_listener.h  cl_session.h  cl_session_base.h  http_server.h
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: main.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: hamlog.h  includes.h  tchecker.h
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/command_line/solution (1-я копия)/: CMakeLists.txt
sprint2/problems/command_line/solution (1-я копия)/src/: main.cpp
sprint2/problems/command_line/solution (1-я копия)/src/game/: game.cpp
sprint2/problems/command_line/solution (1-я копия)/src/json/: json_loader.cpp
sprint2/problems/command_line/solution (1-я копия)/src/model/: game_dog_session.h  infrastructure.cpp
sprint2/problems/command_line/solution (1-я копия)/src/parse_ticker/: ticker.h
sprint2/problems/command_line/solution (1-я копия)/src/req_helper/: declaration_structs.cpp
sprint2/problems/command_line/solution (1-я копия)/src/requester/: api_handler.h
sprint2/problems/command_line/solution (3-я копия)/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: main.cpp
sprint2/problems/game_state/solution/src/: main.cpp
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/game/: game.cpp  tokenizer.cpp  tokenizer.h
sprint2/problems/join_game/solution/src/model/: game_dog_session.cpp  game_dog_session.h  infrastructure.cpp  infrastructure.h
sprint2/problems/join_game/solution/src/req_helper/: help.cpp  req_static_objects.h
sprint2/problems/join_game/solution/src/requester/: api_handler.cpp  api_handler.h  request_handler.cpp  request_handler.h
sprint2/problems/join_game/solution/src/server/: http_server.h
sprint2/problems/logger/solution/: main.cpp
sprint2/problems/move_players/solution (2-я копия)/: CMakeLists.txt
sprint2/problems/move_players/solution/src/: main.cpp
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: main.cpp  req_static_objects.h  request_handler.h
sprint2/problems/server_logging/solution/src/logger/: logger.cpp  logger.h
sprint2/problems/server_logging/solution/src/server/: cl_session.h
sprint2/problems/static_content/precode/src/: request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution (2-я копия)/: CMakeLists.txt
sprint2/problems/time_control/solution (2-я копия)/src/: main.cpp
sprint2/problems/time_control/solution/src/: main.cpp
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/tests/: loot_generator_tests.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/: CMakeLists.txt
sprint4/problems/state_serialization/solution/src/: main.cpp
sprint4/problems/state_serialization/solution/src/colis_detect/: collision_detector.cpp  collision_detector.h
sprint4/problems/state_serialization/solution/src/game/: collizer.h  game.cpp  game.h  player.cpp
sprint4/problems/state_serialization/solution/src/json/: json_loader.cpp
sprint4/problems/state_serialization/solution/src/model/: game_dog_session.cpp  game_dog_session.h  infrastructure.cpp  tagged.h
sprint4/problems/state_serialization/solution/src/req_helper/: declaration_structs.h  help.h  model_help.cpp
sprint4/problems/state_serialization/solution/src/requester/: api_handler.h
sprint4/problems/state_serialization/solution/src/serializer/: serialize_overloads.cpp
sprint4/problems/state_serialization/solution/src/tokenizer/: tokenizer.h
sprint4/problems/state_serialization/solution/tests/: ser_tests.cpp
(+271 files in other folders)
